--- a/priv/rules/longshounen.yml
+++ b/priv/rules/longshounen.yml
@@ -16,7 +16,7 @@
   level: 2
   threshold: 25
   metadata:
-    title_ru: 
-    text_ru:
+    title_ru: Собиратель Колоссов
+    text_ru: Вас интересуют только монументальные произведения, ведь на мелочи вы не размениваетесь.
     image: /assets/achievements/anime/longshounen_2.jpg
     border_color: "#F0D698"
