--- a/priv/rules/_franchises.yml
+++ b/priv/rules/_franchises.yml
@@ -840,3 +840,179 @@
   metadata:
     image:
     - http://i.imgur.com/jClFvnl.png
+- neko_id: shokugeki_no_souma
+  level: 1
+  algo: simple
+  filters:
+    franchise: shokugeki_no_souma
+  threshold: 100%
+  metadata:
+    image: []
+    - neko_id: chiba_pedal
+  level: 1
+  algo: simple
+  filters:
+    franchise: chiba_pedal
+  threshold: 100%
+  metadata:
+    image: []
+    - neko_id: diamond_no_ace
+  level: 1
+  algo: simple
+  filters:
+    franchise: diamond_no_ace
+  threshold: 100%
+  metadata:
+    image: []
+    - neko_id: chiba_pedal
+  level: 1
+  algo: simple
+  filters:
+    franchise: chiba_pedal
+  threshold: 100%
+  metadata:
+    image: []
+    - neko_id: haikyuu
+  level: 1
+  algo: simple
+  filters:
+    franchise: haikyuu
+  threshold: 100%
+  metadata:
+    image: []
+    - neko_id: urusei_yatsura
+  level: 1
+  algo: simple
+  filters:
+    franchise: urusei_yatsura
+  threshold: 100%
+  metadata:
+    image: []
+    - neko_id: casshern
+  level: 1
+  algo: simple
+  filters:
+    franchise: casshern
+  threshold: 100%
+  metadata:
+    image: []
+    - neko_id: amon
+  level: 1
+  algo: simple
+  filters:
+    franchise: amon
+  threshold: 100%
+  metadata:
+    image: []
+    - neko_id: berserk
+  level: 1
+  algo: simple
+  filters:
+    franchise: berserk
+  threshold: 100%
+  metadata:
+    image: []
+    - neko_id: space_cobra
+  level: 1
+  algo: simple
+  filters:
+    franchise: space_cobra
+  threshold: 100%
+  metadata:
+    image: []
+    - neko_id: mazinkaiser
+  level: 1
+  algo: simple
+  filters:
+    franchise: mazinkaiser
+  threshold: 100%
+  metadata:
+    image: []
+    - neko_id: muumin
+  level: 1
+  algo: simple
+  filters:
+    franchise: muumin
+  threshold: 100%
+  metadata:
+    image: []
+    - neko_id: re
+  level: 1
+  algo: simple
+  filters:
+    franchise: re
+  threshold: 100%
+  metadata:
+    image: []
+    - neko_id: getter_robo
+  level: 1
+  algo: simple
+  filters:
+    franchise: getter_robo
+  threshold: 100%
+  metadata:
+    image: []
+    - neko_id: ultraman
+  level: 1
+  algo: simple
+  filters:
+    franchise: ultraman
+  threshold: 100%
+  metadata:
+    image: []
+    - neko_id: kimagure_orange_road
+  level: 1
+  algo: simple
+  filters:
+    franchise: kimagure_orange_road
+  threshold: 100%
+  metadata:
+    image: []
+    - neko_id: kinnikuman
+  level: 1
+  algo: simple
+  filters:
+    franchise: kinnikuman
+  threshold: 100%
+  metadata:
+    image: []
+    - neko_id: tiger_mask
+  level: 1
+  algo: simple
+  filters:
+    franchise: tiger_mask
+  threshold: 100%
+  metadata:
+    image: []
+    - neko_id: ginga_senpuu_braiger
+  level: 1
+  algo: simple
+  filters:
+    franchise: ginga_senpuu_braiger
+  threshold: 100%
+  metadata:
+    image: []
+    - neko_id: mahou_no_yousei_persia
+  level: 1
+  algo: simple
+  filters:
+    franchise: mahou_no_yousei_persia
+  threshold: 100%
+  metadata:
+    image: []
+    - neko_id: obake_no_q_tarou
+  level: 1
+  algo: simple
+  filters:
+    franchise: obake_no_q_tarou
+  threshold: 100%
+  metadata:
+    image: []
+    - neko_id: pro_golfer_saru
+  level: 1
+  algo: simple
+  filters:
+    franchise: pro_golfer_saru
+  threshold: 100%
+  metadata:
+    image: []
