--- a/priv/rules/oldfag.yml
+++ b/priv/rules/oldfag.yml
@@ -17,7 +17,7 @@
   threshold: 150
   metadata:
     title_ru: Золотая коллекция
-    text_ru: Видеосалоны, запись на VHS... Вы помните все так, будто это было вчера.
+    text_ru: Запах целлулоида, полароиды, стереорадиолы… Вы помните всё так, как будто это было вчера.
     image: /assets/achievements/anime/oldfag_2.jpg
     border_color: "#887468"
 
@@ -34,7 +34,7 @@
   level: 4
   threshold: 500
   metadata:
-    title_ru: Здоровался за руку с Осаму Тэдзукой
+    title_ru: Носишь шляпу кота Перро и здоровался с осаму Тедзукой. 
     text_ru: Вы — часть минувшей эпохи. Живая легенда.
     image: /assets/achievements/anime/oldfag_4.jpg
     border_color: "#a5a5a5"
