--- a/priv/rules/_franchises.yml
+++ b/priv/rules/_franchises.yml
@@ -440,11 +440,11 @@
     image:
     - https://moe.shikimori.org/system/user_images/original/84020/584882.jpg
     topic_id: 247360
-- neko_id: sasami
+- neko_id: tenchi_muyou
   level: 1
   algo: simple
   filters:
-    franchise: sasami
+    franchise: tenchi_muyou
     not_anime_ids:
     - 1503
   threshold: 100%
