--- a/priv/rules/oldfag.yml
+++ b/priv/rules/oldfag.yml
@@ -34,7 +34,7 @@
   level: 4
   threshold: 500
   metadata:
-    title_ru: Носишь шляпу кота Перро и здоровался с осаму Тедзукой. 
+    title_ru: Носишь шляпу кота Перро и здоровался с Осаму Тедзукой. 
     text_ru: Вы — часть минувшей эпохи. Живая легенда.
     image: /assets/achievements/anime/oldfag_4.jpg
     border_color: "#a5a5a5"
