--- a/priv/rules/animelist.yml
+++ b/priv/rules/animelist.yml
@@ -172,7 +172,7 @@
   level: 20
   threshold: 10000
   metadata:    
-    title_ru: No title 
-    text_ru: Честно, мы не думали, что кто-то сможет. Теперь тебе не нужно аниме чтобы смотреть аниме.
+    title_ru: SlotAchivName_0020: NULL
+    text_ru: Description: Теперь вам не нужно аниме, чтобы смотреть аниме.
     image: /assets/achievements/anime/animelist_20.gif
     border_color: "#231A24"
