--- a/priv/rules/animelist.yml
+++ b/priv/rules/animelist.yml
@@ -171,8 +171,8 @@
 - <<: *defaults
   level: 20
   threshold: 10000
-  metadata:    
-    title_ru: SlotAchivName_0020: NULL
-    text_ru: Description: Теперь вам не нужно аниме, чтобы смотреть аниме.
+  metadata:
+    title_ru: "SlotAchivName_0020: NULL"
+    text_ru: "Description: Теперь вам не нужно аниме, чтобы смотреть аниме."
     image: /assets/achievements/anime/animelist_20.gif
     border_color: "#231A24"
