exclude recap specials from franchises

--- a/priv/rules/_franchises.yml
+++ b/priv/rules/_franchises.yml
@@ -151,6 +151,8 @@
   algo: simple
   filters:
     franchise: fate_zero
+    not_anime_ids:
+    - 13183
   threshold: 100%
   metadata:
     image:
@@ -379,8 +381,12 @@
   filters:
     franchise: gundam
     not_anime_ids:
+    - 2269
     - 8839
+    - 14007
+    - 20667
     - 23943
+    - 24371
   threshold: 100%
   metadata:
     image:
@@ -401,6 +407,8 @@
   algo: simple
   filters:
     franchise: initial_d
+    not_anime_ids:
+    - 12725
   threshold: 100%
   metadata:
     image:
@@ -529,6 +537,8 @@
   algo: simple
   filters:
     franchise: hikaru_no_go
+    not_anime_ids:
+    - 2336
   threshold: 100%
   metadata:
     image:
@@ -659,6 +669,8 @@
   algo: simple
   filters:
     franchise: snow_halation
+    not_anime_ids:
+    - 21853
   threshold: 100%
   metadata:
     image:
@@ -798,6 +810,8 @@
   algo: simple
   filters:
     franchise: digimon_savers
+    not_anime_ids:
+    - 4712
   threshold: 100%
   metadata:
     image:
@@ -828,6 +842,8 @@
   algo: simple
   filters:
     franchise: nen_joou
+    not_anime_ids:
+    - 6733
   threshold: 100%
   metadata:
     image:
@@ -1254,8 +1270,8 @@
   filters:
     franchise: yu_gi_oh
     not_anime_ids:
-    - 5458
     - 5298
+    - 5458
     - 16576
     - 21595
     - 32346
