--- a/priv/rules/moe.yml
+++ b/priv/rules/moe.yml
@@ -183,9 +183,206 @@
       - 9734
       - 9888
       - 9989
+      - 34798
+      - 35839
+      - 14355
+      - 17341
+      - 21435
+      - 35673
+      - 27887
+      - 12021
+      - 20555
+      - 27441
+      - 32039
+      - 32038
+      - 31376
+      - 348
+      - 9289
+      - 14175
+      - 6802
+      - 8197
+      - 13333
+      - 27419
+      - 33206
+      - 35363
+      - 28999
+      - 31716
+      - 34126
+      - 1723
+      - 4059
+      - 4181
+      - 6351
+      - 36884
+      - 1530
+      - 144
+      - 704
+      - 656
+      - 713
+      - 101
+      - 31771
+      - 33818
+      - 36800
+      - 15911
+      - 33035
+      - 7627
+      - 9510
+      - 9396
+      - 6574
+      - 488
+      - 1888
+      - 4811
+      - 35078
+      - 1858
+      - 17082
+      - 30355
+      - 31498
+      - 34148
+      - 1207
+      - 952
+      - 33948
+      - 31564
+      - 35540
+      - 32924
+      - 35241
+      - 34525
+      - 33089
+      - 35313
+      - 36094
+      - 26165
+      - 16353
+      - 33988
+      - 18119
+      - 18495
+      - 17821
+      - 14131
+      - 11079
+      - 20039
+      - 11887
+      - 23273
+      - 35639
+      - 21511
+      - 31418
+      - 30455
+      - 37027
+      - 16199
+      - 15811
+      - 18343
+      - 18619
+      - 18617
+      - 32740
+      - 33970
+      - 34618
+      - 31500
+      - 34125
+      - 17919
+      - 5141
+      - 20709
+      - 26085
+      - 10671
+      - 2942
+      - 27927
+      - 31091
+      - 31621
+      - 26349
+      - 31848
+      - 35484
+      - 36108
+      - 33447
+      - 34012
+      - 35298
+      - 24629
+      - 29067
+      - 5671
+      - 7759
+      - 10884
+      - 15989
+      - 16123
+      - 35838
+      - 4903
+      - 837
+      - 6379
+      - 5678
+      - 21681
+      - 35222
+      - 32673
+      - 31804
+      - 12815
+      - 30652
+      - 30795
+      - 31883
+      - 31422
+      - 3962
+      - 5914
+      - 1214
+      - 12437
+      - 19023
+      - 25875
+      - 21189
+      - 33031
+      - 25939
+      - 33589
+      - 10572
+      - 15807
+      - 12119
+      - 32828
+      - 32979
+      - 10357
+      - 32681
+      - 9938
+      - 27989
+      - 31665
+      - 31989
+      - 35082
+      - 31988
+      - 35677
+      - 2963
+      - 3225
+      - 5162
+      - 14575
+      - 14511
+      - 20221
+      - 1862
+      - 3667
+      - 6381
+      - 9751
+      - 23725
+      - 32866
+      - 34644
+      - 16157
+      - 10155
+      - 11783
+      - 16385
+      - 29413
+      - 28221
+      - 490
+      - 5419
+      - 24855
+      - 489
+      - 9934
+      - 33731
+      - 975
+      - 16910
+      - 17855
+      - 21267
+      - 951
+      - 5670
+      - 9776
+      - 11339
+      - 35285
+      - 19919
+      - 24031
+      - 976
+      - 36001
+      - 36943
+      - 35249
+      - 37433
+      - 32175
+      - 35828
+      - 35997
+      - 30901
   metadata:
     title_ru: Начинающий моэфаг
-    text_ru: Позволь проводить тебя в удивительный 2д-мир.
+    text_ru: Позволь проводить тебя в очаровательный 2D-мир.
     image: /assets/achievements/anime/moe_1.jpg
     border_color: "#FBCEB1"
     topic_id: 227423
@@ -204,6 +401,6 @@
   threshold: 80%
   metadata:
     title_ru: Первоклассная моэта
-    text_ru: Вы приняли слишком большую дозу тортиков и сами стали моэ.
+    text_ru: Вы приняли слишком большую дозу тортиков и сами стали излучать моэ.
     image: /assets/achievements/anime/moe_3.gif
     border_color: "#ff0000"
