--- a/priv/rules/gar.yml
+++ b/priv/rules/gar.yml
@@ -471,7 +471,7 @@
     text_ru: Ваши первые шаги в жанре а борода уже не сбривается.
     topic_id: 227419
     image: /assets/achievements/anime/gar_1.jpg
-    border_color: "#333d2f"
+    border_color: "#755C48"
 
 - <<: *defaults
   level: 2
