--- a/priv/rules/animelist.yml
+++ b/priv/rules/animelist.yml
@@ -51,7 +51,7 @@
   threshold: 300
   metadata:
     title_ru: Эстет
-    text_ru: Удобно развалившись в кресле, вы наслаждаетесь просмотром аниме. Качественная графика, прекрасное музыкальное сопровождение, интересные сюжеты... эти японские мультики весьма хороши.
+    text_ru: Качественная графика, прекрасное музыкальное сопровождение, интересные сюжеты... эти японские мультики весьма хороши.
     image: /assets/achievements/anime/animelist_6.jpg
     border_color: "#F64A46"
 
@@ -96,7 +96,7 @@
   threshold: 888
   metadata:
     title_ru: Бесконечное путешествие
-    text_ru: У каждого человека свои звезды. Одним — тем, кто странствует, — они указывают путь. Для других это просто маленькие огоньки. Дорога вперед бесконечна. Хотите ли вы продолжать идти по ней?
+    text_ru: У каждого свои звезды. Одним они указывают путь, для других это просто маленькие огоньки. Дорога вперед бесконечна. Хотите ли вы продолжать идти по ней?
     image: /assets/achievements/anime/animelist_11.jpg
     border_color: "#002f55"
 
@@ -174,7 +174,7 @@
   level: 20
   threshold: 10000
   metadata:
-    title_ru: "SlotAchivName_0020: NULL"
+    title_ru: "SlotAchievName_0020: NULL"
     text_ru: "Description: Теперь вам не нужно аниме, чтобы смотреть аниме."
     image: /assets/achievements/anime/animelist_20.gif
     border_color: "#231A24"
