--- a/priv/rules/police.yml
+++ b/priv/rules/police.yml
@@ -8,7 +8,7 @@
       - 39
   metadata:
     title_ru: Народный дружинник
-    text_ru: Любой может оказаться предателем. Нельзя терять бдительности.
+    text_ru: На улицах неспокойно. Нельзя терять бдительности.
     image: /assets/achievements/anime/police_1.jpg
     topic_id: 222038
 
