--- a/priv/rules/gar.yml
+++ b/priv/rules/gar.yml
@@ -468,7 +468,7 @@
       - 987
   metadata:
     title_ru: Так мужественно, что не вздохнуть 
-    text_ru: Ваши первые шаги в жанре а борода уже не сбривается.
+    text_ru: Ваши первые шаги в жанре, а борода уже не сбривается.
     topic_id: 227419
     image: /assets/achievements/anime/gar_1.jpg
     border_color: "#755C48"
