--- a/priv/rules/police.yml
+++ b/priv/rules/police.yml
@@ -34,7 +34,7 @@
   level: 4
   threshold: 100
   metadata:
-    title_ru: Вершина иерархии, высший начальствующий состав
+    title_ru: Вершина иерархии
     text_ru: Как вы себя чувствуете, забравшись так далеко?
     image: /assets/achievements/anime/police_4.jpg
     border_color: "#c7d0cc"
