--- a/priv/rules/_franchises.yml
+++ b/priv/rules/_franchises.yml
@@ -1348,7 +1348,8 @@
     franchise: mai_hime
   threshold: 100%
   metadata:
-    image: []
+    image:
+    - https://desu.shikimori.org/system/user_images/original/34807/593793.jpg
     topic_id: 247360
 - neko_id: selector_spread_wixoss
   level: 1
@@ -1579,7 +1580,8 @@
     franchise: mahou_no_princess_minky_momo
   threshold: 100%
   metadata:
-    image: []
+    image:
+    - https://nyaa.shikimori.org/system/user_images/original/34807/593800.jpg
     topic_id: 247360
 - neko_id: ehon_yose
   level: 1
@@ -1638,7 +1640,8 @@
     franchise: juusenki_l_gaim
   threshold: 100%
   metadata:
-    image: []
+    image:
+    - https://moe.shikimori.org/system/user_images/original/34807/593807.jpg
     topic_id: 247360
 - neko_id: sonic
   level: 1
@@ -1707,7 +1710,8 @@
     franchise: iron_man
   threshold: 100%
   metadata:
-    image: []
+    image:
+    - https://moe.shikimori.org/system/user_images/original/34807/593812.jpg
     topic_id: 247360
 - neko_id: obake_no_q_tarou
   level: 1
@@ -1728,4 +1732,13 @@
   metadata:
     image:
     - https://kawai.shikimori.org/system/user_images/original/84020/588511.jpg
+    topic_id: 247360
+- neko_id: ojamajo_doremi
+  level: 1
+  algo: simple
+  filters:
+    franchise: ojamajo_doremi
+  threshold: 100%
+  metadata:
+    image: []
     topic_id: 247360
